# future

./: README.md  pyproject.toml
myfuture-kedro/: .gitignore  README.md  pyproject.toml
myfuture-kedro/conf/base/: catalog.yml  logging.yml  parameters.yml
myfuture-kedro/conf/base/parameters/: John.yml  evaluate.yml
myfuture-kedro/conf/base/parameters/people/: Felix.yml  John.yml
myfuture-kedro/data/08_reporting/: results.json
myfuture-kedro/data/08_reporting/results_Felix/: Carbon capture.csv  First man turns 150.csv  Fusion.csv  fusion.csv
myfuture-kedro/data/08_reporting/results_John/: Carbon capture.csv  First man turns 150.csv  Fusion.csv  fusion.csv
myfuture-kedro/docs/source/: conf.py  index.rst
myfuture-kedro/src/: setup.py
myfuture-kedro/src/myfuture_kedro/: __init__.py  __main__.py  settings.py
myfuture-kedro/src/myfuture_kedro/pipelines/evaluate/: README.md  __init__.py  nodes.py  pipeline.py
myfuture-kedro/src/tests/: test_run.py
myfuture-kedro/src/tests/pipelines/evaluate/: test_pipeline.py
