[tool.poetry]
name = "myfuture"
version = "0.1.0"
description = ""
authors = ["H. Felix Wittmann <hfwittmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
kedro = "^0.18.4"
flake8 = "^6.0.0"
black = "^22.12.0"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
